--- a/programs/1-Camera-FOV/index.html
+++ b/programs/1-Camera-FOV/index.html
@@ -2,8 +2,10 @@
 <html lang="fa"> <!-- زبان فارسی یا زبان مورد نظر خود -->
 <head>
     <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three.js Fullscreen Scene</title>
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico">
     <link rel="stylesheet" href="/src/style.css"> <!-- فایل CSS که در بالا توضیح دادیم -->
 </head>
 <body>
